--- a/ASSIGNMENT1.html
+++ b/ASSIGNMENT1.html
@@ -154,7 +154,7 @@
             margin-right: 54px;
             padding-top: 30px;
             margin-top: 80px;
-            background-size: 1100px 600px; 
+            /* background-size: 1100px 600px;  */
             /* background-position: center center;  */
             background-repeat: no-repeat;
             background-attachment: fixed;
