--- a/nauyjrea1503.html
+++ b/nauyjrea1503.html
@@ -9,13 +9,14 @@ table, th, td {
 th, td {
   padding: 5px;
 }
+
 </style>
 </head>
 <body>
 
 <table style="width:60%" align="center">
   <tbody><tr>
-    <td><a href="/ASSIGNMENT1.html">Link to Assignment #1</a></td>
+    <td><a href="/shrdshivjun233103.html">Link to Assignment #1</a></td>
       <td></td>
   </tr>
     <tr>
