--- a/ASSIGNMENT_3/frontendfinal/my-app/public/index.html
+++ b/ASSIGNMENT_3/frontendfinal/my-app/public/index.html
@@ -16,6 +16,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <!-- <script async src="https://cse.google.com/cse.js?cx=b2bd2d95401f24d5a">
+    </script>
+    <div class="gcse-search"></div> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
