--- a/nauyjrea1503.html
+++ b/nauyjrea1503.html
@@ -24,8 +24,8 @@ th, td {
     <td><a href="https://shreyaproject0331.wl.r.appspot.com/search?keyword=iphone&minPrice=10&maxPrice=1000&condition=[%22new%22,%22good%22]&seller=true&freeShipping=true&expeditedShipping=false&sortBy=BestMatch">Link to Assignment #2 Cloud</a></td>    
   </tr>
   <tr>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Assignment #3</a></td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Assignment #3 Cloud</a></td> 
+    <td><a href="https://hw3shreya.wl.r.appspot.com/">Link to Assignment #3</a></td>
+    <td><a href="https://hw3shreyaback.wl.r.appspot.com/search?keyword=iphone&category=All+Categories&condition=New&freeshipping=true&distance=10&buyerPostalCode=90007">Link to Assignment #3 Cloud</a></td> 
   </tr>
   <tr>
      <td></td>
